# rust-analyzer-example

./: Cargo.toml  index.html
.nlsp/: rust_analyzer.json
src/: lib.rs  main.rs
